# IR2121-ROBOTICA-MOBIL

./: .gitignore
00-Teleoperation/: config.rviz
00-Teleoperation/01. Resultats Gazebo/: launch_ros2_bag_play.bash
00-Teleoperation/Scripts/: launch_ros2_bag_record.bash  launch_rviz2.bash  launch_tb3_webots.bash
01-Worlds/: TD_n1.yaml
01-Worlds/scripts/: config_amcl.rviz  launch_amcl.bash  launch_ros2_bag_record.bash  launch_tb3_house_sim.bash  publish_transform.bash  visualize_localization.bash  visualize_map.bash
10-Navigation/: map9.yaml
10-Navigation/patrolling_task/: CMakeLists.txt  package.xml
99-Exámens/Final/ros2_ws/src/path_length/: CMakeLists.txt  package.xml
99-Exámens/Final/ros2_ws/src/path_length/src/: path_length_calculator.cpp
99-Exámens/Final/ros2_ws/src/room_exercise/: CMakeLists.txt  package.xml
99-Exámens/Final/ros2_ws/src/room_exercise/launch/: navigation2.launch.py
99-Exámens/Final/ros2_ws/src/room_exercise/maps/: map.yaml
99-Exámens/Final/ros2_ws/src/room_exercise/rviz/: amcl_default_view.rviz
Cartographer/Capturas/: map1.pgm  map2.pgm  map4.pgm  map4.yaml  map6.pgm
Cartographer/Capturas[Antiguo]/: map1.pgm  map1.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml  map5.pgm  map5.yaml  map6.pgm  map6.yaml  map7.pgm  map7.yaml  map8.pgm  map8.yaml
Cartographer/FisicoGrande/: map.pgm  map11.pgm  map11.yaml  map4.pgm  map5.pgm  map6.pgm  (+2 more)
Examen/: config_map.rviz  config_robot.rviz  launch_ros2_bag_record.bash  launch_tb3_empty_sim.bash  publish_map.bash  publish_transform.bash  rooms.yaml  visualize_map.bash  visualize_robot.bash
Navigation/: map_server.launch.py
Teleoperation/: config.rviz
Worlds/: TI_n1.yaml  TI_n1_edited.yaml
_Apunts/: comandos.md
warehouse_exercise/: CMakeLists.txt
(+151 files in other folders)
